--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Οι λογαριασμοί καταργήθηκαν με επιτυχία",
   "no_public_key_title": "Προειδοποίηση! - Αυτός ο λογαριασμός δεν διαθέτει δημόσιο κλειδί!",
   "not_registered_title": "Αυτός ο λογαριασμός δεν είναι εγγεγραμμένος στο blockchain",
-  "not_registered_warning": "Αυτός ο λογαριασμός δεν έχει ακόμη συναλλαγές. Εάν σκοπεύετε να χρησιμοποιήσετε αυτόν τον λογαριασμό για αποστολή και/ή λήψη, συνιστάται να ενεργοποιήσετε αυτόν τον λογαριασμό τώρα.",
+  "not_registered_warning": "Αυτός ο λογαριασμός δεν έχει ακόμη συναλλαγές. Εάν σκοπεύετε να χρησιμοποιήσετε αυτόν τον λογαριασμό για αποστολή και/ή λήψη, συνιστάται να ενεργοποιήσετε/προστατέψετε αυτόν τον λογαριασμό τώρα.",
   "load_all_transactions": "Φόρτωση όλων",
   "load_all_transactions_hint": "Η φόρτωση όλων των συναλλαγών προκαλεί τελικά πολλά αιτήματα με χρήση υψηλού εύρους ζώνης. Ανάλογα με τη δική σας και τους κόμβους σύνδεση στο διαδίκτυο και τον αριθμό των συναλλαγών, αυτή η ενέργεια μπορεί να διαρκέσει κάποιο χρόνο. Μετά την ανάκτηση, οι συναλλαγές αποθηκεύονται στην κρυφή μνήμη τοπικά. Θέλετε πραγματικά να φορτώσετε όλες τις συναλλαγές; (Το όριο ανάκτησης περιορίζεται σε 10 χιλιάδες συναλλαγές)",
   "manage_accounts": "Διαχείριση λογαριασμών",
@@ -567,5 +567,7 @@
   "contact": "Επικοινωνία",
   "send_single_message": "Να στείλετε μήνυμα",
   "message_is_binary": "Μήνυμα δεδομένων",
-  "add_account_or_contact": "Προσθήκη λογαριασμού ή επαφής"
+  "add_account_or_contact": "Προσθήκη λογαριασμού ή επαφής",
+  "hint_new_account": "Αυτός είναι ένας νέος λογαριασμός. Δεν έχει εγγραφεί ακόμα στην αλυσίδα, δηλαδή δεν έχει συναλλαγές.",
+  "account_new": "Νέος"
 }
