--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Cuenta(s) eliminada(s) con éxito",
   "no_public_key_title": "¡Advertencia! - ¡Esta cuenta no posee una clave pública!",
   "not_registered_title": "Esta cuenta no está registrada en la cadena de bloques.",
-  "not_registered_warning": "Esta cuenta aún no tiene transacciones. Si tiene la intención de utilizar esta cuenta para enviar y/o recibir, se recomienda activar esta cuenta ahora.",
+  "not_registered_warning": "Esta cuenta aún no tiene transacciones. Si tiene la intención de utilizar esta cuenta para enviar y/o recibir, se recomienda activar/proteger esta cuenta ahora.",
   "load_all_transactions": "Cargar todo",
   "load_all_transactions_hint": "La carga de todas las transacciones eventualmente genera muchas solicitudes con un alto uso de ancho de banda. Dependiendo de su conexión a Internet y de los nodos y la cantidad de transacciones, esta acción puede llevar algún tiempo. Una vez obtenidas, las transacciones se almacenan en caché localmente. ¿Realmente desea cargar todas las transacciones? (El límite de obtención está limitado a 10 000 transacciones)",
   "manage_accounts": "Cuentas de administración",
@@ -567,5 +567,7 @@
   "contact": "Contacto",
   "send_single_message": "Enviar mensaje",
   "message_is_binary": "Mensaje de datos",
-  "add_account_or_contact": "Agregar cuenta o contacto"
+  "add_account_or_contact": "Agregar cuenta o contacto",
+  "hint_new_account": "Esta es una cuenta nueva. Todavía no está registrado en la cadena, es decir, no tiene transacciones.",
+  "account_new": "Nuevo"
 }
