--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "アカウントが正常に削除されました",
   "no_public_key_title": "警告！ - このアカウントは公開鍵を所有していません!",
   "not_registered_title": "このアカウントはブロックチェーンに登録されていません",
-  "not_registered_warning": "このアカウントにはまだ取引がありません。このアカウントを送受信に使用する場合は、今すぐこのアカウントを有効にすることをお勧めします。",
+  "not_registered_warning": "このアカウントにはまだ取引がありません。このアカウントを送受信に使用する場合は、今すぐこのアカウントをアクティブ化/保護することをお勧めします。",
   "load_all_transactions": "すべてロード",
   "load_all_transactions_hint": "すべてのトランザクションをロードすると、最終的に帯域幅の使用量が多い多くのリクエストが発生します。あなたとノードのインターネット接続とトランザクションの数によっては、このアクションに時間がかかる場合があります。フェッチされると、トランザクションはローカルにキャッシュされます。本当にすべてのトランザクションをロードしますか? (フェッチ制限は 10K トランザクションに制限されています)",
   "manage_accounts": "アカウントの管理",
@@ -567,5 +567,7 @@
   "contact": "コンタクト",
   "send_single_message": "メッセージを送る",
   "message_is_binary": "データメッセージ",
-  "add_account_or_contact": "アカウントまたは連絡先を追加"
+  "add_account_or_contact": "アカウントまたは連絡先を追加",
+  "hint_new_account": "これは新しいアカウントです。まだチェーンに登録されていません。つまり、トランザクションはありません。",
+  "account_new": "新しい"
 }
