--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Аккаунты успешно удалены",
   "no_public_key_title": "Предупреждение! - У этой учетной записи нет открытого ключа!",
   "not_registered_title": "Этот аккаунт не зарегистрирован в блокчейне",
-  "not_registered_warning": "В этом аккаунте еще нет транзакций. Если вы собираетесь использовать эту учетную запись для отправки и/или получения, рекомендуется активировать эту учетную запись сейчас.",
+  "not_registered_warning": "В этом аккаунте еще нет транзакций. Если вы собираетесь использовать эту учетную запись для отправки и/или получения, рекомендуется активировать/защитить эту учетную запись сейчас.",
   "load_all_transactions": "Загрузить все",
   "load_all_transactions_hint": "Загрузка всех транзакций в конечном итоге приводит к большому количеству запросов с высокой пропускной способностью. В зависимости от вашего интернет-соединения и интернет-соединения узлов, а также количества транзакций, это действие может занять некоторое время. После получения транзакции кэшируются локально. Вы действительно хотите загрузить все транзакции? (Ограничение получения ограничено транзакциями 10K)",
   "manage_accounts": "Управление учетными записями",
@@ -567,5 +567,7 @@
   "contact": "Контакт",
   "send_single_message": "Отправить сообщение",
   "message_is_binary": "Сообщение данных",
-  "add_account_or_contact": "Добавить учетную запись или контакт"
+  "add_account_or_contact": "Добавить учетную запись или контакт",
+  "hint_new_account": "Это новый аккаунт. Он еще не зарегистрирован в цепочке, т.е. не имеет транзакций.",
+  "account_new": "Новый"
 }
