--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Налози су успешно уклоњени",
   "no_public_key_title": "Упозорење! - Овај налог не поседује јавни кључ!",
   "not_registered_title": "Овај налог није регистрован у блоцкцхаин-у",
-  "not_registered_warning": "Овај налог још увек нема трансакција. Ако намеравате да користите овај налог за слање и/или примање, препоручује се да одмах активирате овај налог.",
+  "not_registered_warning": "Овај налог још увек нема трансакција. Ако намеравате да користите овај налог за слање и/или примање, препоручује се да сада активирате/заштитите овај налог.",
   "load_all_transactions": "Учитај све",
   "load_all_transactions_hint": "Учитавање свих трансакција на крају изазива много захтева са великом употребом пропусног опсега. У зависности од ваше и интернет везе чворова и броја трансакција, ова радња може потрајати. Једном преузете, трансакције се локално кеширају. Да ли заиста желите да учитате све трансакције? (Ограничење преузимања је ограничено на 10.000 трансакција)",
   "manage_accounts": "Управљајте налозима",
@@ -567,5 +567,7 @@
   "contact": "Контакт",
   "send_single_message": "Пошаљи поруку",
   "message_is_binary": "Дата Мессаге",
-  "add_account_or_contact": "Додајте налог или контакт"
+  "add_account_or_contact": "Додајте налог или контакт",
+  "hint_new_account": "Ово је нови налог. Још увек није регистрован у ланцу, тј. нема трансакција.",
+  "account_new": "Нова"
 }
