--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Акаунтът(ите) са премахнати успешно",
   "no_public_key_title": "Внимание! - Този акаунт не притежава публичен ключ!",
   "not_registered_title": "Този акаунт не е регистриран в блокчейна",
-  "not_registered_warning": "Този акаунт все още няма транзакции. Ако възнамерявате да използвате този акаунт за изпращане и/или получаване, препоръчително е да го активирате сега.",
+  "not_registered_warning": "Този акаунт все още няма транзакции. Ако възнамерявате да използвате този акаунт за изпращане и/или получаване, препоръчително е да активирате/защитите този акаунт сега.",
   "load_all_transactions": "Зареди всички",
   "load_all_transactions_hint": "Зареждането на всички транзакции в крайна сметка причинява много заявки с високо използване на честотната лента. В зависимост от вашата и интернет връзката на възлите и броя на транзакциите това действие може да отнеме известно време. След като бъдат извлечени, транзакциите се кешират локално. Наистина ли искате да заредите всички транзакции? (Ограничението за извличане е ограничено до 10K транзакции)",
   "manage_accounts": "Управление на акаунти",
@@ -567,5 +567,7 @@
   "contact": "Контакт",
   "send_single_message": "Изпрати съобщение",
   "message_is_binary": "Съобщение за данни",
-  "add_account_or_contact": "Добавете акаунт или контакт"
+  "add_account_or_contact": "Добавете акаунт или контакт",
+  "hint_new_account": "Това е нов акаунт. Все още не е регистриран във веригата, т.е. няма транзакции.",
+  "account_new": "Нов"
 }
