--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Els comptes s'han eliminat correctament",
   "no_public_key_title": "Avís! - Aquest compte no posseeix una clau pública!",
   "not_registered_title": "Aquest compte no està registrat a la cadena de blocs",
-  "not_registered_warning": "Aquest compte encara no té transaccions. Si teniu intenció d'utilitzar aquest compte per enviar i/o rebre, us recomanem que l'activeu ara.",
+  "not_registered_warning": "Aquest compte encara no té transaccions. Si teniu intenció d'utilitzar aquest compte per enviar i/o rebre, es recomana activar/protegir aquest compte ara.",
   "load_all_transactions": "Carregueu-ho tot",
   "load_all_transactions_hint": "La càrrega de totes les transaccions acaba provocant moltes sol·licituds amb un ús elevat d'ample de banda. Depenent de la vostra connexió a Internet i dels nodes i del nombre de transaccions, aquesta acció pot trigar un temps. Un cop obtingudes, les transaccions s'emmagatzemen a la memòria cau localment. Realment voleu carregar totes les transaccions? (El límit d'obtenció té un límit de 10.000 transaccions)",
   "manage_accounts": "Gestionar comptes",
@@ -567,5 +567,7 @@
   "contact": "Contacte",
   "send_single_message": "Enviar missatge",
   "message_is_binary": "Missatge de dades",
-  "add_account_or_contact": "Afegeix un compte o un contacte"
+  "add_account_or_contact": "Afegeix un compte o un contacte",
+  "hint_new_account": "Aquest és un compte nou. Encara no està registrat a la cadena, és a dir, no té transaccions.",
+  "account_new": "Nou"
 }
