--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Compte(s) supprimé(s) avec succès",
   "no_public_key_title": "Avertissement! - Ce compte ne possède pas de clé publique !",
   "not_registered_title": "Ce compte n'est pas enregistré dans la blockchain",
-  "not_registered_warning": "Ce compte n'a pas encore de transactions. Si vous avez l'intention d'utiliser ce compte pour envoyer et/ou recevoir, il est recommandé d'activer ce compte maintenant.",
+  "not_registered_warning": "Ce compte n'a pas encore de transactions. Si vous avez l'intention d'utiliser ce compte pour envoyer et/ou recevoir, il est recommandé d'activer/protéger ce compte maintenant.",
   "load_all_transactions": "Charger tout",
   "load_all_transactions_hint": "Le chargement de toutes les transactions entraîne finalement de nombreuses requêtes avec une utilisation élevée de la bande passante. En fonction de la vôtre et de la connexion Internet des nœuds et du nombre de transactions, cette action peut prendre un certain temps. Une fois récupérées, les transactions sont mises en cache localement. Voulez-vous vraiment charger toutes les transactions ? (La limite de récupération est limitée à 10 000 transactions)",
   "manage_accounts": "Gérer les comptes",
@@ -567,5 +567,7 @@
   "contact": "Contact",
   "send_single_message": "Envoyer le message",
   "message_is_binary": "Message de données",
-  "add_account_or_contact": "Ajouter un compte ou un contact"
+  "add_account_or_contact": "Ajouter un compte ou un contact",
+  "hint_new_account": "Ceci est un nouveau compte. Il n'est pas encore enregistré sur la chaîne, c'est-à-dire qu'il n'a aucune transaction.",
+  "account_new": "Nouveau"
 }
