--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "खाता (खाते) सफलतापूर्वक निकाले गए",
   "no_public_key_title": "चेतावनी! - इस खाते के पास कोई सार्वजनिक कुंजी नहीं है!",
   "not_registered_title": "यह खाता ब्लॉकचेन में पंजीकृत नहीं है",
-  "not_registered_warning": "इस खाते में अभी तक कोई लेन-देन नहीं हुआ है। यदि आप भेजने और/या प्राप्त करने के लिए इस खाते का उपयोग करने का इरादा रखते हैं, तो इस खाते को अभी सक्रिय करने की अनुशंसा की जाती है।",
+  "not_registered_warning": "इस खाते में अभी तक कोई लेन-देन नहीं हुआ है। यदि आप भेजने और/या प्राप्त करने के लिए इस खाते का उपयोग करने का इरादा रखते हैं, तो इस खाते को अभी सक्रिय/सुरक्षित करने की अनुशंसा की जाती है।",
   "load_all_transactions": "सभी लोड करें",
   "load_all_transactions_hint": "सभी लेन-देन लोड करने से अंततः उच्च बैंडविड्थ उपयोग के साथ बहुत सारे अनुरोध होते हैं। आपके और नोड्स के इंटरनेट कनेक्शन और लेन-देन की संख्या के आधार पर इस कार्रवाई में कुछ समय लग सकता है। प्राप्त करने के बाद, लेनदेन स्थानीय रूप से कैश किए जाते हैं। क्या आप वाकई सभी लेन-देन लोड करना चाहते हैं? (लाने की सीमा 10K लेन-देन तक सीमित है)",
   "manage_accounts": "खातों का प्रबंधन",
@@ -567,5 +567,7 @@
   "contact": "संपर्क",
   "send_single_message": "मेसेज भेजें",
   "message_is_binary": "डेटा संदेश",
-  "add_account_or_contact": "खाता या संपर्क जोड़ें"
+  "add_account_or_contact": "खाता या संपर्क जोड़ें",
+  "hint_new_account": "यह एक नया खाता है। यह अभी तक श्रृंखला पर पंजीकृत नहीं है, अर्थात इसका कोई लेन-देन नहीं है।",
+  "account_new": "नया"
 }
