--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Računi su uspješno uklonjeni",
   "no_public_key_title": "Upozorenje! - Ovaj račun ne posjeduje javni ključ!",
   "not_registered_title": "Ovaj račun nije registriran u blockchainu",
-  "not_registered_warning": "Ovaj račun još nema transakcija. Ako namjeravate koristiti ovaj račun za slanje i/ili primanje, preporučuje se da sada aktivirate ovaj račun.",
+  "not_registered_warning": "Ovaj račun još nema transakcija. Ako namjeravate koristiti ovaj račun za slanje i/ili primanje, preporučuje se da sada aktivirate/zaštitite ovaj račun.",
   "load_all_transactions": "Učitaj sve",
   "load_all_transactions_hint": "Učitavanje svih transakcija na kraju uzrokuje mnogo zahtjeva s velikom upotrebom propusnosti. Ovisno o vašoj internetskoj vezi i vezi čvorova te broju transakcija, ova radnja može potrajati neko vrijeme. Nakon dohvaćanja, transakcije se lokalno predmemoriraju. Želite li stvarno učitati sve transakcije? (Ograničenje dohvaćanja ograničeno je na 10 tisuća transakcija)",
   "manage_accounts": "Upravljanje računima",
@@ -567,5 +567,7 @@
   "contact": "Kontakt",
   "send_single_message": "Pošalji poruku",
   "message_is_binary": "Podatkovna poruka",
-  "add_account_or_contact": "Dodajte račun ili kontakt"
+  "add_account_or_contact": "Dodajte račun ili kontakt",
+  "hint_new_account": "Ovo je novi račun. Još nije registriran u lancu, tj. nema transakcija.",
+  "account_new": "Novi"
 }
