--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Account rimossi con successo",
   "no_public_key_title": "Avvertimento! - Questo account non possiede una chiave pubblica!",
   "not_registered_title": "Questo account non è registrato nella blockchain",
-  "not_registered_warning": "Questo account non ha ancora transazioni. Se intendi utilizzare questo account per l'invio e/o la ricezione, ti consigliamo di attivarlo ora.",
+  "not_registered_warning": "Questo account non ha ancora transazioni. Se intendi utilizzare questo account per l'invio e/o la ricezione, ti consigliamo di attivare/proteggere questo account ora.",
   "load_all_transactions": "Carica tutto",
   "load_all_transactions_hint": "Il caricamento di tutte le transazioni alla fine causa molte richieste con un elevato utilizzo della larghezza di banda. A seconda della connessione Internet tua e dei nodi e del numero di transazioni, questa azione può richiedere del tempo. Una volta recuperate, le transazioni vengono memorizzate nella cache locale. Vuoi davvero caricare tutte le transazioni? (Il limite di recupero è limitato a 10.000 transazioni)",
   "manage_accounts": "Gestisci account",
@@ -567,5 +567,7 @@
   "contact": "Contatto",
   "send_single_message": "Invia messaggio",
   "message_is_binary": "Messaggio di dati",
-  "add_account_or_contact": "Aggiungi account o contatto"
+  "add_account_or_contact": "Aggiungi account o contatto",
+  "hint_new_account": "Questo è un nuovo account. Non è ancora registrato sulla catena, cioè non ha transazioni.",
+  "account_new": "Nuovo"
 }
