--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Обліковий запис(и) успішно видалено",
   "no_public_key_title": "УВАГА! - Цей обліковий запис не володіє відкритим ключем!",
   "not_registered_title": "Цей обліковий запис не зареєстровано в блокчейні",
-  "not_registered_warning": "Цей рахунок ще не має транзакцій. Якщо ви збираєтеся використовувати цей обліковий запис для надсилання та/або отримання, рекомендуємо активувати цей обліковий запис зараз.",
+  "not_registered_warning": "Цей рахунок ще не має транзакцій. Якщо ви збираєтеся використовувати цей обліковий запис для надсилання та/або отримання, рекомендуємо активувати/захистити цей обліковий запис зараз.",
   "load_all_transactions": "Завантажити все",
   "load_all_transactions_hint": "Завантаження всіх транзакцій зрештою викликає багато запитів із високим використанням пропускної здатності. Залежно від вашого підключення до Інтернету та підключення вузлів і кількості транзакцій ця дія може зайняти деякий час. Після отримання транзакції кешуються локально. Ви дійсно хочете завантажити всі транзакції? (Ліміт отримання обмежено 10 тисячами транзакцій)",
   "manage_accounts": "Керування обліковими записами",
@@ -567,5 +567,7 @@
   "contact": "контакт",
   "send_single_message": "Відправити повідомлення",
   "message_is_binary": "Повідомлення даних",
-  "add_account_or_contact": "Додайте обліковий запис або контакт"
+  "add_account_or_contact": "Додайте обліковий запис або контакт",
+  "hint_new_account": "Це новий обліковий запис. Він ще не зареєстрований у мережі, тобто не має транзакцій.",
+  "account_new": "новий"
 }
